# 0xGen

./: .gitignore  .golangci.yml  .goreleaser.yml  ADVERTISEMENT_OUTLINE.md  ALPHA_RELEASE_NOTES.md  ARCHITECTURE_REVIEW.md  BETA_RELEASE_READINESS_REPORT.md  CHANGELOG.md  CIPHER_CODEBASE_SUMMARY.md  CIPHER_GUI_OVERVIEW.md  CIPHER_GUI_QUICK_REFERENCE.md  CODE_REVIEW.md  COMPETITIVE_ANALYSIS.md  COMPREHENSIVE_SECURITY_REVIEW.md  CONTRIBUTING.md  DATABASE_REVIEW.md  DEMO_VIDEO_PRODUCTION_GUIDE.md  DEMO_VIDEO_SCRIPT.md  Dockerfile  INSTALL.md  ISSUES_QUICK_REF.txt  ISSUE_101_RESOLUTION.md  MARKETING_MATERIALS_SUMMARY.md  Makefile  PLUGIN_GUIDE.md  PROMOTIONAL_FACT_SHEET.md  README.es.md  README.md  RELEASE_CHECKLIST.md  RELEASE_INSTRUCTIONS.md  RELEASE_READINESS_VERIFICATION.md  ROADMAP.md  ROADMAP_COMPETITIVE.md  SECURITY.md  SECURITY_REVIEW_AND_TOOL_COMPARISON.md  SOCIAL_MEDIA_PROMOTION.md  TEST_ENVIRONMENT_SETUP.md  THREAT_MODEL.md  VERIFICATION_REPORT_ISSUE_1.md  VERIFICATION_REPORT_ISSUE_2.md  (+11 more)
.github/: CODEOWNERS  pull_request_template.md  settings.yml
.github/allowlists/: glyph-allowlist.txt  legacy-brand-allowlist.txt
.github/workflows/: bump-homebrew.yml  ci.yml  codeql.yml  (+15 more)
apps/desktop-shell/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-shell/src-tauri/icons/: icon.icns
apps/desktop-shell/src-tauri/src/: crash.rs  diagnostics.rs  feedback.rs  main.rs
docs/: CNAME  configuration.md  hooks.py  index.md  plugins.md  projectboard.md  quickstart.md  requirements.txt  sprint-plan.md  threat-model.md
examples/: findings-sample.jsonl  rules.example.json
examples/glyph-passive-headers/: pyproject.toml
examples/glyph-passive-headers/glyph_passive_headers/: __init__.py  __main__.py
examples/glyph-passive-headers/glyph_passive_headers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/glyph-passive-headers/glyph_plugin_runtime/glyph/: common_pb2.py  common_pb2_grpc.py  plugin_bus_pb2.py  plugin_bus_pb2_grpc.py
examples/oxg-passive-headers/: pyproject.toml
examples/oxg-passive-headers/oxg_passive_headers/: __init__.py  __main__.py
examples/oxg-passive-headers/oxg_passive_headers.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/oxg-passive-headers/oxg_plugin_runtime/oxg/: case_pb2.py  case_pb2_grpc.py  common_pb2.py  common_pb2_grpc.py  plugin_bus_pb2.py  plugin_bus_pb2_grpc.py  secrets_pb2.py  secrets_pb2_grpc.py
hack/: new_plugin.sh  validate_manifests.sh
plugins/: ALLOWLIST  README.md  compatibility.json  findings.schema.json  manifest.schema.json
scripts/: 0xgenctl  0xgenctl.cmd  build_release.sh  build_windows_installer.ps1  build_windows_installer.sh  check_security_checklist.sh  snapshot_docs.py  update-brew-formula.sh  update_homebrew_formula.sh  update_plugin_catalog.py  update_version_badge.py
specs/: case.schema.json  finding.md  finding.schema.json  glyph-plugin.json  oxg-passive-headers-plugin.json  pipeline-export.schema.json  sarif-2.1.0.schema.json
(+982 files in other folders)
