[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oxg-passive-headers"
version = "0.1.0"
description = "A hello-world 0xgen plugin that checks for missing security headers."
authors = [{ name = "Jules", email = "jules@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.entry-points."console_scripts"]
oxg-passive-headers = "oxg_passive_headers.__main__:main"

[tool.setuptools]
packages = ["oxg_passive_headers", "oxg_plugin_runtime"]
