[package]
name = "glyph-desktop-shell"
version = "0.1.0"
edition = "2021"
description = "Glyph desktop shell"
authors = ["Glyph"]
license = "Apache-2.0"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.4"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tauri = { version = "1.5", features = ["event", "window-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
